<resources>
    <string name="app_name">New App</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="read">Read</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="update_activity">Update Activity</string>
    <string name="read_activity">Read Activity</string>
</resources>